# sber-whisper

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  settings.html  tsconfig.json  vite.config.ts
python/: asr_service.py  requirements.txt
scripts/: build-sidecar.ps1  build-sidecar.sh  copy-artifacts.ps1  copy-artifacts.sh  windows-cargo-check.cmd  windows-run-local-debug.cmd  windows-tauri-build.cmd  windows-vs-env.cmd
src/: App.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/popup/: main.tsx  popup.css
src/settings/: main.tsx  settings.css
src/shared/: api.ts  smoke.test.ts
tests/python/: test_sidecar.py
