[package]
name = "sber-whisper"
version = "0.1.5"
description = "Sber Whisper desktop voice-to-text app"
authors = ["pingv"]
edition = "2021"

[lib]
name = "sber_whisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
